RESOLVED FIXED307822
REGRESSION(307236@main): [Tahoe] webanimations/no-scheduling-while-filling-non-accelerated.html is a flaky text failure
https://bugs.webkit.org/show_bug.cgi?id=307822
Summary REGRESSION(307236@main): [Tahoe] webanimations/no-scheduling-while-filling-no...
Diego De La Toba
Reported 2026-02-13 10:20:39 PST
webanimations/no-scheduling-while-filling-non-accelerated.html is a flaky text failure on macOS Tahoe. HISTORY: https://results.webkit.org/?suite=layout-tests&test=webanimations%2Fno-scheduling-while-filling-non-accelerated.html TEXT DIFF: --- /Volumes/Data/worker/Apple-Tahoe-Debug-AppleSilicon-WK2-Tests/build/layout-test-results/webanimations/no-scheduling-while-filling-non-accelerated-expected.txt +++ /Volumes/Data/worker/Apple-Tahoe-Debug-AppleSilicon-WK2-Tests/build/layout-test-results/webanimations/no-scheduling-while-filling-non-accelerated-actual.txt @@ -1,3 +1,3 @@ -PASS There should not be any updates made to the timeline after a forward-filling animation completes. +FAIL There should not be any updates made to the timeline after a forward-filling animation completes. assert_equals: expected 1 but got 2 DIFF URL: https://build.webkit.org/results/Apple-Tahoe-Debug-AppleSilicon-WK2-Tests/307378%40main%20(829)/webanimations/no-scheduling-while-filling-non-accelerated-pretty-diff.html REPRODUCTION: I was able to reproduce this on macOS Tahoe Debug ToT with the following: run-webkit-tests --debug --no-retry --force --iterations 4000 -f webanimations/no-scheduling-while-filling-non-accelerated.html I am going to mark expectations as pass fail while this pends investigation.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-13 10:20:45 PST
Diego De La Toba
Comment 2 2026-02-13 11:17:01 PST
EWS
Comment 3 2026-02-13 11:20:42 PST
Test gardening commit 307495@main (1e4c3a7f9524): <https://commits.webkit.org/307495@main> Reviewed commits have been landed. Closing PR #58645 and removing active labels.
Antoine Quint
Comment 4 2026-02-18 00:42:19 PST
This only happens with `-f`, a single process seems to be solid. And disabling "Threaded Time-based Animations" in the test makes it pass without a hitch, so there's no doubt about the cause.
Antoine Quint
Comment 5 2026-02-18 01:05:18 PST
Logging indicates we are sometimes scheduling frames because we have pending threaded animations updates… but this test should not schedule threaded animations ever since it's only animating margin-left. This is likely the cause of this failure.
Antoine Quint
Comment 6 2026-02-18 01:46:38 PST
EWS
Comment 7 2026-02-18 07:16:40 PST
Committed 307758@main (7bcd19f3fd56): <https://commits.webkit.org/307758@main> Reviewed commits have been landed. Closing PR #58914 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.